# shuffle

./: .gitignore  Cargo.toml  README.md  build.rs
Formula/: shuffle.rb
ios/MP3PlayeriOS/: ContentView.swift  Info.plist  MP3PlayeriOSApp.swift  PlayerStore.swift
ios/MP3PlayeriOS.xcodeproj/: project.pbxproj
macos/: MediaRemoteHelper.swift
scripts/: media_remote_send.swift  test_media_remote.sh
src/: macos_media.rs  main.rs
