[package]
name = "shuffle"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4"
crossterm = "0.29"
id3 = "1.14"
rand = "0.8.5"
rodio = "0.20.1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3.2", features = ["NSDate", "NSDictionary", "NSObjCRuntime", "NSRunLoop", "NSString"] }
objc2-media-player = { version = "0.3.2", features = ["MPMediaItem", "MPNowPlayingInfoCenter"] }
